# ppp_modem_4g

./: .gitignore  .mxproject  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Makefile  README.md  STM32F407_backup.ld  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compile_commands.json  modem.elf  modem.ioc  modem.map  modem.sln  modem.vcxproj  modem.vcxproj.filters  ppp_4gmodem.elf  ppp_4gmodem.map
Core/Inc/: connectionmanager.h  ppp_modem.h  stm32f4xx_it.h
Core/Src/: connectionmanager.c  main.c  ppp_modem.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c
MBEDTLS/App/: mbedtls_config.h  net_sockets.c
cmake/stm32cubemx/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Makefile  cmake_install.cmake  stm32cubemx.sln
modem.dir/Debug/modem.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
